# AI-FACTORY

./: .gitignore  README.md  pyproject.toml
scripts/: check_unique_cv_keys.py  extract_markdowns.py  print_all_intros.py
src/ai_factory/: config.py  extract_intro_agent.py  extract_section_agent.py  utils.py
src/ai_factory/agents/cv_extracter/: utils.py
src/ai_factory/agents/cv_extracter/extract_comments_for_analyst/: agents.py  prompts.py  schemas.py
src/ai_factory/agents/cv_extracter/extract_day_of_week_pattern/: agents.py  prompts.py  schemas.py
src/ai_factory/agents/cv_extracter/extract_filename_pattern/: agents.py  prompts.py  schemas.py
src/ai_factory/agents/cv_extracter/extract_filename_pattern_section/: agents.py  prompts.py  tools.py
src/ai_factory/agents/cv_extracter/extract_processing_pattern/: agents.py  prompts.py  schemas.py
src/ai_factory/agents/cv_extracter/extract_recurring_pattern/: agents.py  prompts.py  schemas.py
src/ai_factory/agents/cv_extracter/extract_sections/: agents.py  prompts.py  schemas.py
src/ai_factory/agents/cv_extracter/extract_title/: agents.py  prompts.py  schemas.py
src/ai_factory/agents/cv_extracter/extract_volume_characteristics/: agents.py  prompts.py  schemas.py
src/ai_factory/agents/cv_extracter/orchestrator/: orchestrator.py  plan.py
src/ai_factory/agents/files_extracter/detect_after_schedule/: agents.py
src/ai_factory/agents/files_extracter/detect_remove_duplicates/: agents.py
src/ai_factory/agents/files_extracter/extract_file_structure/: agents.py  prompts.py  schemas.py
(+9 files in other folders)
